fix: secondary layout spacing

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -441,9 +441,11 @@ a {
                 height: 78px;
               }
               a {
+                display: inline-block;
                 color: var(--color-violet);
                 font-weight: 600;
                 line-height: 1.25;
+                padding-right: 1rem;
               }
             }
           }
